--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -10,8 +10,23 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  setup_rust:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v3
+    - name: Install nightly toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
+        default: true
+        components: rust-src
+    - name: Install wasm
+      run: rustup target add wasm32-unknown-unknown
+    
+  
   test_token:
-
+    needs: setup_rust
     runs-on: ubuntu-latest
 
     steps:
