--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -11,11 +11,18 @@ env:
 
 jobs:
   test_token:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install nightly toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
+        default: true
+        components: rust-src
+    - name: Install wasm
+      run: rustup target add wasm32-unknown-unknown
     - name: Build
       working-directory: ./contracts/token
       run: cargo build --verbose
