--- a/contracts/governor/Cargo.toml
+++ b/contracts/governor/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "database"
+name = "governor"
 version = "0.1.0"
 authors = ["[your_name] <[your_email]>"]
 edition = "2021"
@@ -19,15 +19,16 @@ scale-info = { version = "2", default-features = false, features = ["derive"], o
 openbrush = { tag = "v2.3.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22"] }
 
 nameof = "1.2.2"
+num = "0.4.0"
+
+database = { path = "../database", default-features = false, features = ["ink-as-dependency"] }
 
 [lib]
-name = "database"
+name = "governor"
 path = "lib.rs"
 crate-type = [
 	# Used for normal contract Wasm blobs.
 	"cdylib",
-	# Used for ABI generation
-	"rlib",
 ]
 
 [features]
@@ -42,6 +43,7 @@ std = [
     "scale/std",
     "scale-info",
     "scale-info/std",
+    "database/std",
 
     "openbrush/std",
 ]
