--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        contract: [token, database]
+        contract: [token, database, governor]
 
     steps:
     - uses: actions/checkout@v3
