--- a/contracts/token/Cargo.toml
+++ b/contracts/token/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "token"
-version = "0.2.5"
+version = "0.2.0"
 authors = ["[your_name] <[your_email]>"]
 edition = "2021"
 
@@ -24,6 +24,7 @@ path = "lib.rs"
 crate-type = [
 	# Used for normal contract Wasm blobs.
 	"cdylib",
+    "rlib",
 ]
 
 [features]
