--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@polkadot/api": "^9.11.3",
     "@polkadot/api-contract": "^9.11.3",
     "@polkadot/extension-dapp": "^0.44.6",
+    "@polkadot/extension-inject": "^0.44.6",
     "@polkadot/keyring": "^10.1.6",
     "@polkadot/types": "^9.11.3",
     "@polkadot/types-codec": "^9.11.3",
