--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@polkadot/api": "^9.2.4",
-    "@polkadot/api-contract": "^9.2.4",
+    "@polkadot/api": "^9.11.3",
+    "@polkadot/api-contract": "^9.11.3",
     "@polkadot/extension-dapp": "^0.44.6",
+    "@polkadot/extension-inject": "^0.44.6",
     "@polkadot/keyring": "^10.1.6",
     "@polkadot/types": "^9.11.3",
+    "@polkadot/types-codec": "^9.11.3",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,12 +19,13 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-defaults": "^9.0.0",
     "prettier": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
     "react-use-intercom": "^2.0.0",
     "styled-components": "^5.3.6",
@@ -34,8 +37,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --max-warnings=0 'src/**/*.{js,jsx,ts,tsx}'",
-    "lintfix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'"
+    "lint": "eslint --max-warnings=0 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
@@ -51,10 +53,11 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.25",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "lint-staged": "^13.0.3"
+    "lint-staged": "^13.1.0"
   },
   "browserslist": {
     "production": [
