--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-tabs": "^6.0.0",
     "react-toastify": "^9.0.8",
     "react-use-intercom": "^2.0.0",
     "styled-components": "^5.3.6",
