--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "eslint-config-defaults": "^9.0.0",
     "prettier": "^2.8.3",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
